# Programmieren_Abschlussprojekt_MCI

./: .gitignore  README.md  TODO.md  battery_pack_start.py  battery_simulator_start.py  example_utils.py  plotting_utils.py  pyproject.toml
config/: batteries.yaml  bike.yaml
data/sample/: sample_route.csv
docs/: assumptions.md  formulas.md  project_report.md
docs/uml/: activity_diagram.puml  class_diagram.puml
src/: __init__.py
src/ebike_sim/: __init__.py  __main__.py  cli.py
src/ebike_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ebike_sim/analysis/: __init__.py  forces.py  kinematics.py
src/ebike_sim/extensions/: air_density.py  braking_resistor.py  parameter_study.py  recuperation.py  rolling_resistance.py  route_map.py  temperature_model.py  weather.py
src/ebike_sim/io/: __init__.py  gps_reader.py
src/ebike_sim/models/: __init__.py  battery.py  bike_parameters.py  gps_point.py  route_data.py  route_segment.py  simulation_result.py
src/ebike_sim/reporting/: exporters.py
src/ebike_sim/simulation/: __init__.py  battery_simulator.py
src/ebike_sim/visualization/: __init__.py  plots.py
tests/: test_battery_pack.py  test_battery_simulator.py  test_example_utils.py  test_forces.py  test_kinematics.py
