[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebike-sim"
version = "0.1.0"
description = "Minimal e-bike route and battery simulation project"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "matplotlib", "PyYAML", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
